# proficient-pythonista

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
.github/workflows/: make-docs.yml
code/illegalstates/: check_spanner_nut1.py  check_spanner_nut2.py  check_spanner_nut3.py  check_spanner_nut4.py  check_spanner_nut5.py  check_spanner_nut6.py  check_spanner_nut7.py  nuts.py  spanner1.py  spanner2.py  spanner3.py  spanner4.py  validate_spanners_csv.py
code/planexecute/: run_game.py
code/planexecute/robotgame/: constants.py  goods.py  grid.py  main.py  robot.py  world.py
source/: conf.py  context_and_assumptions.rst  index.rst  make_illegal_states_unrepresentable.rst  parameterisation.rst  spanners.csv
